<resources>
    <string name="app_name">SNS</string>
    <string name="basic_level_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="verification">Please enter the 6-digit code sent to</string>
    <string name="terms">Terms &amp; Condition</string>
    <string name="month">Days &amp; Month</string>

    <!-- Strings used for term and agreement -->
    <string name="intro">
        These terms and conditions govern your use of SignNaSabi app and constitute a legal agreement between you and
        your identification.
        By accessing or using the App, you agree to be bound by these Terms. If you do not agree to these Terms, please do not use the App.
    </string>
    <string name="one_one">
        \u2022 The App is intended for get your identification that will use to identify the user.
    </string>
    <string name="one_two">
        \u2022 You agree to use the App only for lawful purposes and in accordance with these Terms and all applicable laws and regulations.
    </string>
    <string name="two">
        \u2022 You may need to create an account to access certain features of the App. You are responsible for maintaining
        the confidentiality of your account credentials and for all activities that occur under your account.
    </string>
    <string name="three">
        \u2022 Our collection and use of personal information is governed by our Privacy Policy.
        By using the App, you consent to our collection and use of your personal information as described therein.
    </string>
    <string name="four">
        \u2022 The App and its original content, features, and functionality are owned by
        SingNaSabi and are protected by international copyright, trademark, patent,
        trade secret, and other intellectual property or proprietary rights laws.
    </string>

    <string name="five">
        \u2022 You agree not to engage in any of the following prohibited activities:
    </string>
    <string name="five_one">
        \u2022 Violating any applicable law or regulation.
    </string>
    <string name="five_two">
        \u2022 Using the App for any illegal or unauthorized purpose.
    </string>
    <string name="five_three">
        \u2022 Attempting to interfere with, compromise the system integrity or security,
        or decipher any transmissions to or from the servers running the App.
    </string>
    <string name="five_four">
        \u2022 Modifying, adapting, or hacking the App or modifying another website so as to falsely imply that it is associated with the App.
    </string>

    <string name="six">
        \u2022To the fullest extent permitted by applicable law, SignNaSabi shall not be liable for
        any indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues,
        whether incurred directly or indirectly, or any loss of data, use, goodwill, or other intangible losses, resulting from (a)
        your access to or use of or inability to access or use the App; (b) any conduct or content of any third party on the App; (c)
        any content obtained from the App; and (d) unauthorized access, use, or alteration of your transmissions or content, whether based on warranty,
        contract, tort (including negligence),
        or any other legal theory, whether or not we have been informed of the possibility of such damage.
    </string>
    <string name="seven">
        \u2022 We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material,
        we will try to provide at least 30 days notice prior to any new terms taking effect.
        What constitutes a material change will be determined at our sole discretion.
    </string>
    <string name="eigth">
        \u2022 These Terms shall be governed and construed in accordance with the laws of Philippines, without regard to its conflict of law provisions.
    </string>
    <string name="nine">
        \u2022 If you have any questions about these Terms, please contact us at reignmondizon93@gmail.com
    </string>
    <string name="basicLevel">Basic level American Sign Language (ASL) involves
        learning essential signs, hand shapes,
        and basic grammar to communicate effectively</string>

    <string name="advancelevel">Advanced ASL instruction includes teaching school personnel, covering school terms,
        subject areas, trade industries, and more.</string>

    <string name="advancelevel1">Advanced Level 1 ASL includes training on religious vocabulary and Bible terminology.
        This helps users communicate effectively about faith.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <string name="button_trans_title">
        Button Translator
    </string>

    <string name="button_trans_des">
        This button use to translate gesture into text.
    </string>

    <string name="button_practice_title">
        Button Practice
    </string>

    <string name="button_practice_des">
        This button use to practice your sign language, you can open it by finishing all the lesson.
    </string>

    <string name="button_dcitionary_title">
        Button Dictionary
    </string>

    <string name="button_dictionary_des">
        This button use to explore a basic guide to American Sign Language (ASL) signs.
    </string>

    <string name="button_profile_title">
        Button Profile
    </string>

    <string name="button_button_profile_title_des">
        This button use to view and edit your profile.
    </string>


</resources>