<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="700dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/terms"
            android:textColor="@color/text_color"
            android:textSize="28sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:requiresFadingEdge="vertical"
            android:layout_below="@+id/textView"
            android:fadingEdgeLength="70dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="25dp"
                    android:text="1. Use of the App"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/policie_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/one_one"
                    android:textColor="@color/policie_color"
                    android:alpha=".8"
                    android:justificationMode="inter_word"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/one_two"
                    android:textColor="@color/policie_color"
                    android:alpha=".8"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/policie_color"
                    android:text="2. Account Registration"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/two"
                    android:textColor="@color/policie_color"
                    android:alpha=".8"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="25dp"
                    android:text="3. Privacy"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/policie_color"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/three"
                    android:textColor="@color/policie_color"
                    android:alpha=".8"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="25dp"
                    android:text="4. Intellectual Property"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/policie_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:justificationMode="inter_word"
                    android:text="@string/four"
                    android:textColor="@color/policie_color"
                    android:alpha=".8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="25dp"
                    android:text="5. Prohibited Activities"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/policie_color"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/five"
                    android:textColor="@color/policie_color"
                    android:justificationMode="inter_word"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/five_one"
                    android:textColor="@color/policie_color"
                    android:alpha=".8"
                    android:justificationMode="inter_word"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/five_two"
                    android:textColor="@color/policie_color"
                    android:alpha=".8"
                    android:justificationMode="inter_word"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/five_three"
                    android:textColor="@color/policie_color"
                    android:alpha=".8"
                    android:justificationMode="inter_word"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/five_four"
                    android:textColor="@color/policie_color"
                    android:alpha=".8"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="25dp"
                    android:text="6. Limitation of Liability"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/policie_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/six"
                    android:textColor="@color/policie_color"
                    android:alpha=".8"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="25dp"
                    android:text="7. Changes to Terms"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/policie_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/seven"
                    android:textColor="@color/policie_color"
                    android:alpha=".8"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="25dp"
                    android:text="8. Governing Law"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/policie_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/eigth"
                    android:textColor="@color/policie_color"
                    android:alpha=".8"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="25dp"
                    android:text="9. Contact Us"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/policie_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:justificationMode="inter_word"
                    android:text="@string/nine"
                    android:textColor="@color/policie_color"
                    android:alpha=".8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginVertical="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:background="#DEBB7E"
                        android:text="Agree"
                        android:textColor="@color/backgroundColor"
                        app:cornerRadius="10dp"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:background="#DEBB7E"
                        android:text="Cancel"
                        android:textColor="@color/backgroundColor"
                        app:cornerRadius="10dp"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>




    </RelativeLayout>

</androidx.cardview.widget.CardView>